--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 html,
 body {
   height: 100%;
   width: 100%;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .main1 {
@@ -18,12 +18,10 @@ body {
   justify-content: center;
   position: relative;
 }
-
 .main1 .left {
   height: 100%;
   width: 30%;
 }
-
 .main1 .right {
   height: 80%;
   width: 50%;
@@ -31,7 +29,6 @@ body {
   background-position: top;
   background-size: cover;
 }
-
 .main1 .overlay {
   position: absolute;
   height: 100%;
@@ -43,6 +40,12 @@ body {
   display: flex;
   gap: 8rem;
 }
+.overlay .down {
+  height: 90%;
+  width: 100%;
+  display: flex;
+  align-items: flex-end;
+}
 
 .nav .navlinks {
   width: 25%;
@@ -50,18 +53,10 @@ body {
   justify-content: space-between;
   align-items: center;
 }
-
 .nav .navlinks a {
   text-decoration: none;
   color: black;
   font-size: 12px;
-}
-
-.overlay .down {
-  height: 90%;
-  width: 100%;
-  display: flex;
-  align-items: flex-end;
 }
 
 .down .downLeft {
@@ -70,27 +65,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  /* align-items: center; */
 }
-
-.downLeft .leftTop {
-  display: flex;
-  flex-direction: column;
-  gap: 3rem;
-}
-
-.downLeft .leftTop p {
-  font-size: 10px;
-  transform: rotate(-90deg);
-}
-
-.downLeft .leftBottom {
-  height: 30%;
-  width: 2px;
-  background-color: rgb(206, 206, 206);
-  align-self: center;
-}
-
 .down .downMiddle {
   width: 80%;
   height: 85%;
@@ -98,17 +73,49 @@ body {
   flex-direction: column;
   justify-content: space-between;
 }
-
-.downMiddle .middleTop h1 {
-  font-size: 35px;
-  margin-bottom: 15px;
+.down .downRight {
+  width: 10%;
+  height: 85%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
+.downLeft .leftTop {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+.downLeft .leftTop p {
+  font-size: 10px;
+  transform: rotate(-90deg);
+}
+.downLeft .leftBottom {
+  height: 30%;
+  width: 2px;
+  background-color: rgb(206, 206, 206);
+  align-self: center;
+}
+
+.downMiddle .middleTop h1 {
+  font-size: 4rem;
+  margin-bottom: 15px;
+  font-family: "Times New Roman", Times, serif;
+}
 .downMiddle .middleTop p {
   font-size: 10px;
   width: 35%;
   margin-bottom: 15px;
   line-height: 20px;
+  color: gray;
+}
+.downMiddle .middleBottom {
+  display: flex;
+  justify-content: space-between;
+}
+.downMiddle .middleBottom .icons-container {
+  display: flex;
+  gap: 1rem;
 }
 
 #btn {
@@ -116,16 +123,9 @@ body {
   background-color: black;
   color: white;
   font-weight: 100;
-}
-
-.downMiddle .middleBottom {
-  display: flex;
-  justify-content: space-between;
-}
-
-.downMiddle .middleBottom .icons-container {
-  display: flex;
-  gap: 1rem;
+  border-radius: 0.4rem;
+  padding: 0.7rem 2rem;
+  font-size: 0.6rem;
 }
 
 .middleBottom .middleRight {
@@ -134,21 +134,79 @@ body {
   align-items: center;
   justify-content: space-between;
 }
-
 .middleBottom .middleRight .line {
   height: 2px;
   width: 80%;
   background-color: rgb(202, 202, 202);
 }
-
 .middleBottom .middleRight p {
   font-size: 10px;
 }
 
-.down .downRight {
-  width: 10%;
-  height: 85%;
+.main2 {
+  height: 90%;
+  padding: 2rem;
+}
+.main2 .overlay {
+  height: 90%;
+  display: flex;
+  position: relative;
+}
+.main2 .overlay .left {
+  height: 100%;
+  width: 55%;
+  background-image: url("https://floweraura-blog-img.s3.ap-south-1.amazonaws.com/plants-blog/1-D.jpg");
+  background-position: left;
+  background-size: cover;
+}
+.main2 .overlay .right {
+  height: 80%;
+  width: 30%;
+}
+.main2 .overlay .container {
+  position: absolute;
+  height: 100%;
+  width: 100%;
   display: flex;
   align-items: center;
+}
+.main2 .overlay .container .left {
+  height: 100%;
+  width: 40%;
+}
+.main2 .overlay .container .right {
+  background-color: #fff;
+  height: 70%;
+  width: 60%;
+  display: flex;
+}
+.main2 .overlay .container .right .text {
+  padding-left: 3rem;
+  width: 80%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
+  gap: 1rem;
+}
+.main2 .overlay .container .right .text p {
+  width: 65%;
+  color: gray;
+}
+.main2 .overlay .container .right .text button {
+  width: 20%;
+  border: none;
+  background-color: transparent;
+  text-align: left;
+  font-weight: 800;
+  text-decoration: underline;
+  word-spacing: 0.1rem;
+  font-size: 0.9rem;
+}
+.main2 .overlay .container .right .icon {
+  height: 100%;
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
