--- a/style.scss
+++ b/style.scss
@@ -104,7 +104,7 @@ body {
     h1 {
       font-size: 4rem;
       margin-bottom: 15px;
-      font-family: 'Times New Roman', Times, serif;
+      font-family: "Times New Roman", Times, serif;
     }
     p {
       font-size: 10px;
@@ -183,6 +183,7 @@ body {
         height: 70%;
         width: 60%;
         display: flex;
+        justify-content: space-between;
         .text {
           padding-left: 3rem;
           width: 80%;
@@ -207,13 +208,62 @@ body {
           }
         }
         .icon {
+          width: 20%;
           height: 100%;
           color: black;
           display: flex;
           justify-content: center;
           align-items: center;
+          i {
+            color: black;
+          }
         }
       }
     }
   }
 }
+
+.main3 {
+  height: 80%;
+  display: flex;
+  .left{
+    width: 40%;
+    display: flex;
+
+    .left{
+        width: 20%;
+    }
+    .right{
+        width: 80%;
+        background: white;
+        padding: 3rem;
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        .contact, p{
+            color: gray;
+            font-size: 1rem;
+            width: 80%;
+        }
+        h2{
+            font-family: 'Times New Roman', Times, serif;
+            font-size: 2rem;
+        }
+        button{
+            padding: 0.8rem 1rem;
+            background-color: transparent;
+            width: 40%;
+            border-radius: 5px;
+            outline: none;
+            border: 2px solid black;
+        }
+
+    }
+  }
+  .right{
+    width: 60%;
+    background-color: yellowgreen;
+    background-image: url(https://i.pinimg.com/1200x/1a/98/3b/1a983bd04a778d0ec69d75f54078247b.jpg);
+  }
+}
+
