--- a/style.css
+++ b/style.css
@@ -327,3 +327,52 @@ body {
   justify-content: center;
   align-items: flex-end;
 }
+
+.main5 {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.main5 .container {
+  width: 80%;
+  height: 90%;
+  display: flex;
+  justify-content: space-between;
+}
+.main5 .container .left {
+  border-radius: 5px;
+  width: 35%;
+  background-image: url(https://c1.wallpaperflare.com/preview/599/555/601/plant-glass-bottle-hand-holding.jpg);
+  background-size: cover;
+}
+.main5 .container .right {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+.main5 .container .right h2 {
+  font-family: "Times New Roman", Times, serif;
+}
+.main5 .container .right .first {
+  width: 100%;
+  height: 30%;
+  display: flex;
+  align-items: flex-end;
+}
+.main5 .container .right .second {
+  width: 100%;
+  height: 60%;
+  display: flex;
+  justify-content: space-between;
+  gap: 10%;
+}
+.main5 .container .right .second .para {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  color: gray;
+}
