--- a/style.scss
+++ b/style.scss
@@ -301,23 +301,23 @@ body {
         justify-content: center;
         gap: 1.2rem;
         padding-left: 5rem;
-        h2{
-            font-family: 'Times New Roman', Times, serif;
+        h2 {
+          font-family: "Times New Roman", Times, serif;
         }
         button {
           width: 25%;
-            border: none;
-            background-color: transparent;
-            text-align: left;
-            font-weight: 800;
-            text-decoration: underline;
-            word-spacing: 0.1rem;
-            font-size: 0.9rem;
-          }
-          p{
-            width: 50%;
-            color: gray;
-          }
+          border: none;
+          background-color: transparent;
+          text-align: left;
+          font-weight: 800;
+          text-decoration: underline;
+          word-spacing: 0.1rem;
+          font-size: 0.9rem;
+        }
+        p {
+          width: 50%;
+          color: gray;
+        }
       }
       .mid {
         width: 20%;
@@ -330,8 +330,59 @@ body {
         justify-self: flex-end;
         display: flex;
         justify-content: center;
-        align-items: flex-end ;
+        align-items: flex-end;
       }
     }
   }
 }
+
+.main5 {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .container {
+    width: 80%;
+    height: 90%;
+    display: flex;
+    justify-content: space-between;
+    .left {
+      border-radius: 5px;
+      width: 35%;
+      background-image: url(https://c1.wallpaperflare.com/preview/599/555/601/plant-glass-bottle-hand-holding.jpg);
+      background-size: cover;
+    }
+    .right {
+      width: 60%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1rem;
+      h2{
+        font-family: 'Times New Roman', Times, serif;
+      }
+      .first {
+        width: 100%;
+        height: 30%;
+        display: flex;
+        align-items: flex-end;
+      }
+      .second {
+        width: 100%;
+        height: 60%;
+        display: flex;
+        justify-content: space-between;
+        gap: 10%;
+        .para{
+            width: 40%;
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            color: gray;
+        }
+      }
+    }
+  }
+}
+
+
