--- a/style.css
+++ b/style.css
@@ -376,3 +376,84 @@ body {
   gap: 1rem;
   color: gray;
 }
+
+.main6 {
+  height: 80%;
+  display: flex;
+  align-items: flex-end;
+}
+.main6 .container {
+  background-color: black;
+  height: 80%;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  color: white;
+}
+.main6 .container p {
+  color: gray;
+}
+.main6 .container .first {
+  width: 40%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 4rem 0;
+  padding-left: 5rem;
+}
+.main6 .container .first .up {
+  display: flex;
+  flex-direction: column;
+  height: 10%;
+  gap: 1rem;
+}
+.main6 .container .first .up div {
+  display: flex;
+  align-items: center;
+  gap: 2px;
+}
+.main6 .container .first .up div input {
+  width: 50%;
+  padding: 0.7rem 1rem;
+  background-color: transparent;
+  outline: none;
+  border: 1px solid rgb(114, 113, 113);
+}
+.main6 .container .first .up div button {
+  padding: 0.8rem 1rem;
+  border: none;
+  font-size: 0.7rem;
+  background-color: white;
+}
+.main6 .container .second {
+  width: 15%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 4rem 0;
+  padding-left: 5rem;
+}
+.main6 .container .third {
+  width: 15%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  padding: 4rem 0;
+  padding-left: 5rem;
+}
+.main6 .container .fourth {
+  width: 20%;
+  height: 80%;
+  display: flex;
+  padding: 4rem 0;
+  align-items: flex-end;
+}
+.main6 .container .fourth .icons {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+}
