--- a/style.scss
+++ b/style.scss
@@ -358,8 +358,8 @@ body {
       flex-direction: column;
       align-items: center;
       gap: 1rem;
-      h2{
-        font-family: 'Times New Roman', Times, serif;
+      h2 {
+        font-family: "Times New Roman", Times, serif;
       }
       .first {
         width: 100%;
@@ -373,16 +373,96 @@ body {
         display: flex;
         justify-content: space-between;
         gap: 10%;
-        .para{
-            width: 40%;
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-            color: gray;
+        .para {
+          width: 40%;
+          display: flex;
+          flex-direction: column;
+          gap: 1rem;
+          color: gray;
         }
       }
     }
   }
 }
 
-
+.main6 {
+  height: 80%;
+  display: flex;
+  align-items: flex-end;
+  .container {
+    background-color: black;
+    height: 80%;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    color: white;
+    p{
+        color: gray;
+    }
+    .first {
+      width: 40%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      padding: 4rem 0;
+      padding-left: 5rem;
+      .up {
+        display: flex;
+        flex-direction: column;
+        height: 10%;
+        gap: 1rem;
+        div {
+          display: flex;
+          align-items: center;
+          gap: 2px;
+          input {
+            width: 50%;
+            padding: 0.7rem 1rem;
+            background-color: transparent;
+            outline: none;
+            border: 1px solid rgb(114, 113, 113);
+          }
+          button {
+            padding: 0.8rem 1rem;
+            border: none;
+            font-size: 0.7rem;
+            background-color: white;
+          }
+        }
+      }
+    }
+    .second {
+      width: 15%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      padding: 4rem 0;
+      padding-left: 5rem;
+    }
+    .third {
+      width: 15%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 1.5rem;
+      padding: 4rem 0;
+      padding-left: 5rem;
+    }
+    .fourth {
+      width: 20%;
+      height: 80%;
+      display: flex;
+      padding: 4rem 0;
+      align-items: flex-end;
+      .icons {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        gap: 2rem;
+        
+      }
+    }
+  }
+}
