--- a/style.css
+++ b/style.css
@@ -390,8 +390,15 @@ body {
   justify-content: space-around;
   color: white;
 }
+.main6 .container .mail {
+  font-size: 1.5rem;
+}
+.main6 .container h2 {
+  font-size: 0.8rem;
+}
 .main6 .container p {
   color: gray;
+  font-size: 0.8rem;
 }
 .main6 .container .first {
   width: 40%;
@@ -419,12 +426,14 @@ body {
   background-color: transparent;
   outline: none;
   border: 1px solid rgb(114, 113, 113);
+  border-radius: 2px;
 }
 .main6 .container .first .up div button {
   padding: 0.8rem 1rem;
   border: none;
   font-size: 0.7rem;
   background-color: white;
+  border-radius: 2px;
 }
 .main6 .container .second {
   width: 15%;
