--- a/style.scss
+++ b/style.scss
@@ -119,6 +119,7 @@ body {
             justify-content: space-between;
             .icons-container {
               display: flex;
+              font-size: 1.5rem;
               gap: 1rem;
             }
             .middleRight {
